[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbd"
version = "0.0.1"
description = "Model-based diffusion package"
authors = [
    {name = "Taekyung Kim", email = "taekyung.kim@toyota.com"}
]
dependencies = [
    "gym",
    "pandas",
    "seaborn",
    "matplotlib",
    "imageio",
    "control",
    "tqdm",
    "tyro",
    "meshcat",
    "sympy",
    "gymnax",
    "jax[cuda12]",
    "distrax",
    "gputil",
    "jaxopt",
    "flax>=0.10.7",
    "optuna>=4.4.0",
    "wandb>=0.21.0",
    "numpy>=2.3.1",
]

[tool.setuptools]
packages = ["mbd"] 
